readme 添加虚拟机参数